--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "express": "^4.16.4",
     "hbs": "^4.1.1",
+    "input-validate": "^2.0.0",
+    "npm-inputvalidation": "^1.0.6",
     "request": "^2.88.2"
   },
   "devDependencies": {
